prepared for deploy

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,9 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: stukdo
+  encoding: utf8
+  min_messages: warning
+  pool: 5
+  timeout: 5000
